samples/_failures_safe/1761393387_b5de93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a48e48a7.c: In function ‘main’:
./samples/SAFE/__tmp_a48e48a7.c:156:21: error: expected ‘;’ at end of input
  156 |             return 1
      |                     ^
      |                     ;
./samples/SAFE/__tmp_a48e48a7.c:156:13: error: expected declaration or statement at end of input
  156 |             return 1
      |             ^~~~~~
./samples/SAFE/__tmp_a48e48a7.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a48e48a7.c:156:13: error: expected declaration or statement at end of input
